--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   assets_audio_player: ^3.1.1
   provider: ^6.1.1
   flutter_secure_storage: ^9.0.0
-
+  webview_windows: ^0.2.0+2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -65,6 +66,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/sounds/ping.mp3
     - assets/sounds/
 
   # An image asset can refer to one or more resolution-specific "variants", see
