--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,11 @@ dependencies:
   http: ^1.1.0
   web_socket_channel: ^2.4.0
   shared_preferences: ^2.2.2
-  assets_audio_player: ^3.1.1
+  # assets_audio_player: ^3.1.1
+  just_audio: ^0.10.0
+  just_audio_windows: ^0.2.2
+
+  
   provider: ^6.1.1
   flutter_secure_storage: ^9.0.0
   webview_windows: ^0.2.0+2
@@ -66,7 +70,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/sounds/ping.mp3
+    # - assets/sounds/ping.mp3
     - assets/sounds/
 
   # An image asset can refer to one or more resolution-specific "variants", see
