--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,13 @@ dependencies:
   # assets_audio_player: ^3.1.1
   just_audio: ^0.10.0
   just_audio_windows: ^0.2.2
+  audioplayers: ^5.0.0
 
   
   provider: ^6.1.1
   flutter_secure_storage: ^9.0.0
   webview_windows: ^0.2.0+2
+  url_launcher: ^6.2.4
   
 dev_dependencies:
   flutter_test:
