--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,10 @@ dependencies:
   
   provider: ^6.1.1
   flutter_secure_storage: ^9.0.0
-  webview_windows: ^0.2.0+2
+  webview_windows: ^0.3.0
   url_launcher: ^6.2.4
-  
+  webview_flutter: ^4.11.0
+  flutter_inappwebview: ^6.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -100,3 +101,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+dependency_overrides:
+  flutter_inappwebview_windows:
+    path: stubs/flutter_inappwebview_windows
