--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   webview_windows: ^0.3.0
   url_launcher: ^6.2.4
   webview_flutter: ^4.11.0
+  webview_flutter_android: ^4.4.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
