--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,19 +39,24 @@ dependencies:
   shared_preferences: ^2.2.2
   # assets_audio_player: ^3.1.1
   just_audio: ^0.10.0
-  just_audio_windows: ^0.2.2
   audioplayers: ^5.0.0
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.9.0
 
   
   provider: ^6.1.1
   flutter_secure_storage: ^9.0.0
-  webview_windows: ^0.3.0
   url_launcher: ^6.2.4
   webview_flutter: ^4.11.0
   webview_flutter_android: ^4.4.2
+  get_it: ^7.6.7
+  flutter_riverpod: ^2.5.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.8
+  freezed: ^2.4.7
+  json_serializable: ^6.7.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
